# ChangeLog for media-libs/libsupertone
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libsupertone/ChangeLog,v 1.2 2006/10/27 11:06:07 kloeri Exp $

  27 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  +files/digest-libsupertone-0.0.2:
  Fix missing files/ dir + digests.

*libsupertone-0.0.2 (26 Oct 2006)

  26 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> +metadata.xml,
  +libsupertone-0.0.2.ebuild:
  New support lib for asterisk chan_unicall
