@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libsupertone
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libsupertone/ChangeLog,v 1.2 2006/10/27 11:06:07 kloeri Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libsupertone/ChangeLog,v 1.3 2007/08/29 17:17:01 phreak Exp $
+
+  29 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing gustavoz from metadata due to his retirement (see #36010 for
+  reference).
 
   27 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
   +files/digest-libsupertone-0.0.2:
